[package]
name = "hash-delivery-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
log = "0.4.17"
rand = "0.8.5"
simplelog = "0.12.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"